tests/negative/regression/r26.orng
fn ident ( ) -> ident .> ident ( { break } ) {

} 